# mixture-agents-models

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  comprehensive_test.py  debug_model_compare.py  final_verification.py  install.sh  prompt.md  pyproject.toml  quick_start.py  setup.sh  test_import.py
.github/: copilot-instructions.md
dynamicrouting/: RLmodelHPC.py
examples/: example_basic_fitting.py  example_dynamic_routing.py
src/: __init__.py
src/mixture_agents_models/: __init__.py  agents.py  analysis.py  fitting.py  integration.py  models.py  plotting.py  tasks.py  types.py  types_.py  utils.py
src/mixture_agents_models/agents/: __init__.py  base.py  bias.py  choice.py  context_rl.py  gambler.py  gambler_b.py  intercept.py  mb_choice.py  mb_reward.py  mf_choice.py  mf_reward.py  perseveration.py  reward.py
tests/: __init__.py  comprehensive_test.py  test_enhanced_functionality.py  test_mixture_agents.py
