[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mixture-agents-models"
version = "0.1.0"
description = "Mixture-of-Agents Hidden Markov Models for behavioral data analysis"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "dataclasses-json>=0.6.0",
    "pathlib",
    "typing-extensions>=4.7.0",
    "h5py>=3.9.0",
    "hmmlearn>=0.3.0",
    "psytrack>=1.0.0",
    "ssm>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.0.280",
]

[project.urls]
Repository = "https://github.com/your-org/mixture-agents-models"
Documentation = "https://mixture-agents-models.readthedocs.io"

[tool.hatch.build.targets.wheel]
packages = ["src/mixture_agents_models"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py310"
